[tool.poetry]
name = "biopsykit-widgets"
version = "0.1.0"
description = ""
authors = ["Robert Richer <robert.richer@fau.de>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.11.0"
black = {version = "^21.12b0", extras = ["d"]}
isort = "^5.10.1"
pytest-cov = "^3.0.0"
coverage = "^6.2"
ipykernel = "^6.6.0"
ipympl = "^0.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true


[tool.poe.tasks]
_black = "black ."
_black_check = "black . --check"
_isort = "isort **/*.py"
_isort_check = "isort **/*.py --check-only"

# Reformat all files using black and sort import
format = ["_black", "_isort"]
format_check = ["_black_check", "_isort_check"]
lint = "prospector"
test = "pytest --cov=biopsykit-widgets --cov-report=xml"
docs = {"script" = "_tasks:task_docs"}
update_version = {"script" = "_tasks:task_update_version"}
register_ipykernel = "python -m ipykernel install --user --name biopsykit-widgets --display-name biopsykit-widgets"
default = ["format", "lint", "test"]